src/objects/Business_Role_Member_Access__c.object
<CustomObject>
    <fields>
        <fullName>Access_Name_Calc__c</fullName>
        <formula>Business_Role_Access__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Access Name (formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Type_Calc__c</fullName>
        <formula>TEXT(Business_Role_Access__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Access Type (formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Role_Access__c</fullName>
        <label>Business Role Access</label>
        <referenceTo>Business_Role_Access__c</referenceTo>
        <relationshipLabel>Business Role Member Accesses</relationshipLabel>
        <relationshipName>Business_Role_Member_Accesses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Business_Role_Member__c</fullName>
        <label>Business Role Member</label>
        <referenceTo>Business_Role_Member__c</referenceTo>
        <relationshipLabel>Business Role Member Accesses</relationshipLabel>
        <relationshipName>Business_Role_Member_Accesses</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Business_Role__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Business Role</label>
        <referenceTo>Business_Role__c</referenceTo>
        <relationshipLabel>Business Role Member Accesses</relationshipLabel>
        <relationshipName>Business_Role_Member_Accesses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Id_Calc__c</fullName>
        <formula>Business_Role_Access__c &amp; &apos;_&apos; &amp; Business_Role_Member__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External ID (formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Id_Calc__c</fullName>
        <formula>Business_Role_Member__r.User__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Id (formula)</label>
        <type>Text</type>
    </fields>
    <label>Business Role Member Access</label>
    <nameField>
        <displayFormat>BRMA-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Role Member Accesses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>